--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <section id="hero" class="d-flex flex-column justify-content-center align-items-start" style="height: 100vh;">
     <div class="hero-container" data-aos="fade-in" style="margin-top: 200px; padding-left: 320px; font-family: 'Times New Roman', Times, serif;">
       <h11>Abolfazl Rajaiyan</h11>
-      <p> <span class="typed typed1" data-typed-items="Ph.D. Student at Sharif University of Technology, Electrical Engineer, IC Designer"></span></p>
+      <p> <span class="typed typed1" data-typed-items="Ph.D. Candidate at Sharif University of Technology, Electrical Engineer, IC Designer"></span></p>
       <div style="font-size: 5px; font-family: 'Times New Roman', Times, serif; padding-left: 320px;">
       </div>
 <!--
@@ -921,5 +921,6 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
