--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="hero-container" data-aos="fade-in" style="margin-top: 200px; padding-left: 320px; font-family: 'Times New Roman', Times, serif;">
       <h11>Abolfazl Rajaiyan</h11>
       <p> <span class="typed typed1" data-typed-items="Ph.D. Candidate at Sharif University of Technology, Electrical Engineer, IC Designer"></span></p>
-      <div style="font-size: 4.5px; font-family: 'Times New Roman', Times, serif; padding-left: 320px;">
+      <div style="font-size: 4px; font-family: 'Times New Roman', Times, serif; padding-left: 320px;">
       </div>
 <!--
 <div class="col-lg-12" style="margin-bottom: 17px;">
@@ -240,7 +240,7 @@
 
         <div class="section-title" style="margin-top: -50px;">
           <h2 style="margin-top: -50px;">About</h2>
-          <p style="text-align: justify; margin-top: -5px;">Abolfazl Rajaiyan received the B.Sc degree in electrical engineering, in 2020, and the M.Sc. degree in electrical engineering-electronic, in 2022, from the Ferdowsi University of Mashhad. He is a Ph.D. Candidate of Electrical Engineering at Sharif University of Technology, Tehran, Iran, since 2022. 
+          <p style="text-align: justify; margin-top: -5px;">Abolfazl Rajaiyan received the B.Sc degree in electrical engineering, in 2020, and the M.Sc. degree in electrical engineering-electronic, in 2022, from the Ferdowsi University of Mashhad. He is a Ph.D. candidate of Electrical Engineering at Sharif University of Technology, Tehran, Iran, since 2022. 
     He was a Teacher Assistant at the Ferdowsi University of Mashhad and Sharif University of Technology.
     Mr. Abolfazl Rajaiyan awards and honors include the Admitted for pursuing M.Sc. studies at Ferdowsi University of Mashhad and Ph.D. studies at Sharif University of Technology without entrance examinations as a talented student, First Rank of Electrical Engineering Students of the Sharif University of Technology and the Ferdowsi University of Mashhad, Second place in the field of scientific research in Khwarizmi Youth Festival, and achieving a GPA of 20 out of 20 in the Ph.D. program at Sharif University of Technology.
 </p>
@@ -924,5 +924,6 @@
 
 
 </html>
+
 
 
