--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <a href="https://ieeexplore.ieee.org/author/37089333314" class="ieee" title="IEEE">
           <span class="icon-text">IEEE</span>
         </a>
-        <a href="https://scholar.google.com/citations?user=yourprofile" class="google-scholar" title="Google Scholar">
+        <a href="https://scholar.google.com/citations?user=aXbQY70AAAAJ" class="google-scholar" title="Google Scholar">
           <i class="fas fa-graduation-cap"></i>
         </a>
         <a href="https://orcid.org/0000-0002-0463-986X" class="orcid" title="ORCID">
@@ -1841,4 +1841,5 @@
 
 
 </html>
+
 
